# Mastering-RTOS-with-ESP32

./: README.md
CH01/: sdkconfig  sdkconfig.old
CH01/main/: sntp_example_main.c
CH02/: README.md  sdkconfig  sdkconfig.old
CH02/main/: CMakeLists.txt  Kconfig.projbuild  main.c  task_blink.c  task_wifi.c  task_wifi.h  utils.h  webserver.c
CH03/: README.md  sdkconfig.old
CH03/Exercises/: sdkconfig
CH03/Exercises/main/: CMakeLists.txt  events_group.c  mutex_critical_main.c  priority_handling_semaphore.c  queues_main.c
CH03/Project/: sdkconfig  sdkconfig.old
CH03/Project/data/: index.html
CH03/Project/main/: CMakeLists.txt  main.c  peripheral_gpio.c  peripheral_gpio.h  task_blink.c  task_blink.h  utils.h
CH03/data/: index.html  index_old.html  index_service.html  index_user.html  test.html
CH03/data/bootstrap/: scripts.js
CH03/main/: CMakeLists.txt  adc_read.c  adc_read.h  main.c  peripheral_adc.h  task_blink.c  task_wifi.c  task_wifi.h  utils.c  utils.h  webserver.c  webserver.h
CH04/Project/: partitions.csv
CH04/Project/data/: index.html
CH04/Project/data/bootstrap/: scripts.js
CH04/Project/main/: CMakeLists.txt  configuration.c  configuration.h  main.c  peripheral_adc.c  task_wifi.c  utils.c  webserver.c
